# UmikoBot-2.0

./: .gitignore  .gitmodules  CMakeLists.txt  README.md  premake5.lua
res/: commands.json
scripts/: build.bat  build.sh  generate_project_files.bat  generate_project_files.sh  init.bat  init.sh
src/: UmikoBot.cpp  UmikoBot.h  main.cpp
src/core/: Core.cpp  Core.h  Data.cpp  Data.h  InterruptHandler.cpp  InterruptHandler.h  Module.cpp  Module.h  Permissions.cpp  Permissions.h
src/modules/: CurrencyModule.cpp  CurrencyModule.h  FunModule.cpp  FunModule.h  GeneralModule.cpp  GeneralModule.h  GlobalModule.cpp  GlobalModule.h  LevelModule.cpp  LevelModule.h  ModerationModule.cpp  ModerationModule.h  Module.cpp  Module.h  UserModule.cpp  UserModule.h
